; ModuleID = '/home/carl/AnghaBench/vlc/src/video_output/extr_vout_subpictures.c_RestartSubFilterCallback.c'
source_filename = "/home/carl/AnghaBench/vlc/src/video_output/extr_vout_subpictures.c_RestartSubFilterCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*, i8*, i8*)* @RestartSubFilterCallback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @RestartSubFilterCallback(i8* %0, i8* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @VLC_UNUSED(i8* %11)
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @VLC_UNUSED(i8* %13)
  %15 = load i8*, i8** %8, align 8
  %16 = call i32 @VLC_UNUSED(i8* %15)
  %17 = load i8*, i8** %9, align 8
  %18 = call i32 @VLC_UNUSED(i8* %17)
  %19 = load i8*, i8** %10, align 8
  %20 = bitcast i8* %19 to i32*
  %21 = call i32 @vout_ControlChangeSubFilters(i32* %20, i32* null)
  %22 = load i32, i32* @VLC_SUCCESS, align 4
  ret i32 %22
}

declare dso_local i32 @VLC_UNUSED(i8*) #1

declare dso_local i32 @vout_ControlChangeSubFilters(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
